--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@
 #
 #    pip-compile 
 #
+certifi==2019.3.9         # via requests
+chardet==3.0.4            # via requests
 click-config-file==0.5.0
 click==7.0
 colorama==0.4.1
 configobj==5.0.6          # via click-config-file
+idna==2.8                 # via requests
 pyyaml==5.1
+requests==2.21.0
 six==1.12.0               # via configobj
+urllib3==1.24.3           # via requests
